--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta content="Web site created using create-react-app" />
+    <link
+      rel="shortcut icon"
+      href="https://img.icons8.com/color/48/000000/world.png"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
     <title>Travel App</title>
   </head>
   <body>
